--- a/package.json
+++ b/package.json
@@ -89,14 +89,15 @@
         "configuration": "./cabal-configuration.json"
       },
       {
-        "id": "cabal-project",
+        "id": "cabal project",
         "aliases": [
           "CabalProject",
-          "cabal-project"
+          "cabal-project", 
+          "cabal project"
         ],
         "extensions": [
-          "cabal.project",
-          "cabal.project.local"
+          ".project",
+          ".project.local"
         ],
         "configuration": "./cabal-configuration.json"
       },
@@ -181,7 +182,7 @@
         "path": "./syntaxes/cabal.json"
       },
       {
-        "language": "cabal-project",
+        "language": "cabal project",
         "scopeName": "cabal.source.project",
         "path": "./syntaxes/cabalProject.json"
       },
