--- a/syntaxes/cabalProject.json
+++ b/syntaxes/cabalProject.json
@@ -7,11 +7,11 @@
   "patterns": [
     {
       "name": "keyword.other.cabal",
-      "match": "(?ix)(\\n|^)\n  ( name\n  | version\n  | cabal-version\n  | build-type\n  | license(-file)?\n  | copyright\n  | author\n  | maintainer\n  | stability\n  | homepage\n  | bug-reports\n  | package-url\n  | synopsis\n  | data-(files|dir)\n  | description\n  | category\n  | extra-(source|doc|tmp)-files\n  | tested-with\n  | tests\n  | import\n  ):\n"
+      "match": "(?ix)(\\n|^)\n  ( tests\n  | import\n  | (optional-|extra-)?packages\n  | benchmarks\n  | verbose\n  | build-(summary|log)\n  | remote-build-reporting\n  | report-planning-failure\n  | symlink-bindir\n  | jobs\n  | semaphore\n  | keep-going\n  | offline\n  | haddock-keep-temp-files \n  | http-transport\n  | ignore-expiry\n  | remote-repo-cache\n  | (logs-|project-|build|store-)dir \n  | project-file \n  | ignore-project \n  | (with-)?compiler\n  | with-hc-pkg \n  | doc-index-file \n  | package-dbs\n  | active-repositories \n  | index-state\n  | constraints\n  | preferences\n  | cabal-lib-version\n  | solver \n  | allow-(older|newer|boot-library-installs)\n  | write-ghc-environment-files \n  | max-backjumps\n  | reorder-goals \n  | (count|fine-grained)-conflicts\n  | minimize-conflict-set \n  | strong-flags\n  | reject-unconstrained-dependencies\n  | per-component\n  | independent-goals \n  | prefer-oldest\n  | extra-prog-path-shared-only\n  | multi-repl \n  ):\n"
     },
     {
       "name": "keyword.other.cabal",
-      "match": "(?ix)^[ \\t]+\n  ( (build(-tool)?|pkgconfig|setup)-depends\n  | (hs-source|include|extra-(lib|frameworks))-dirs\n  | ((other|default)-)?extensions\n  | build-tools\n  | buildable\n  | ((install|autogen)-)?includes\n  | (c(xx)?|js)-sources\n  | extra-\n    ( ((ghci|bundled)-)?libraries\n    | (dynamic-)?library-flavours\n    )\n  | (cmm|cxx|cc|cpp|ld|ghc(-(prof|shared))?)-options\n  | (asm|cmm)-(sources|options)\n  | other-languages\n  | default-language\n  | frameworks\n  | default\n  | manual\n  | location\n  | branch\n  | tag\n  | subdir\n  | exposed(-modules)?\n  | (other|virtual|autogen|reexported)-modules\n  | visibility\n  | main-is\n  | type\n  | test-module\n  | description\n  | mixins\n  | import\n  | signatures\n  | scope\n  | lib-version-(version|linux)\n  | mod-def-file\n  | options\n  | x-\\w[1-9\\w_-]*\n  ):\n"
+      "match": "(?ix)^[ \\t]+\n  ( haddock-(all|hoogle|html|foreign-libraries|executables\n            |tests|benchmarks|internal|(hscolour-)?css|hyperlink-source\n            |quickjump|(contents|index|html)-location|base-url\n            |(resources|output)-dir|use-unicode|for-hackage)\n  | extra-prog-path \n  | flags \n  | library-(vanilla|for-ghci|stripping)\n  | shared \n  | static \n  | executable-(dynamic|static|stripping)\n  | ((library|executable)-)?profiling(-(shared|detail))?\n  | optimization \n  | program-(prefix|suffix)\n  | extra-(lib|framework|include)-dirs(-static)?\n  | split-(sections|objs)\n  | (run-)?tests \n  | benchmarks \n  | relocatable\n  | (debug|build)-info\n  | documentation\n  | test-((machine-)?log|show-details|keep-tix-files\n          |wrapper|fail-when-no-test-suites)\n  | coverage \n  | (benchmark|ghs|test|configure)-options\n  | type \n  | location \n  | tag \n  | subdir\n  | x-\\w[1-9\\w_-]*\n  ):\n"
     },
     {
       "name": "keyword.operator.cabal",
@@ -27,10 +27,10 @@
     },
     {
       "name": "entity.name.section.cabal",
-      "match": "^(?ix:\n  ( library\n  | custom-setup\n  )\n)$\n"
+      "match": "^(?ix:\n  ( program-options )\n)$\n"
     },
     {
-      "match": "^(?ix:\n  ( executable\n  | flag\n  | test-suite\n  | benchmark\n  | common\n  | source-repository\n  | library\n  | foreign-library\n  )\n)( |\\t)+([\\w\\-_]+)$\n",
+      "match": "^(?ix:\n  ( package\n  | source-repository\n  )\n)( |\\t)+([\\w\\-_]+)$\n",
       "captures": {
         "1": {
           "name": "entity.name.section.cabal"
