minor formatting edits

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Haskell Syntax Highlighting",
   "description": "Syntax support for the Haskell programming language.",
   "version": "3.6.0",
-  "publisher": "justusadamtest",
+  "publisher": "justusadam",
   "engines": {
     "vscode": "^1.0.0"
   },
